// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`output snapshot tests > NO_COLOR フォールバック: printRunResult スナップショット 1`] = `
"
Commission 実行結果
──────────────────────────────────────────────────
┌────────────────────┬────────────────────────────────────────┐
│ Run ID             │ run_snapshot                           │
├────────────────────┼────────────────────────────────────────┤
│ Commission         │ snapshot-commission                    │
├────────────────────┼────────────────────────────────────────┤
│ Status             │ ☣ completed                            │
├────────────────────┼────────────────────────────────────────┤
│ Strokes            │ 2 / 3                                  │
├────────────────────┼────────────────────────────────────────┤
│ Duration           │ 5s                                     │
├────────────────────┼────────────────────────────────────────┤
│ Started            │ 2026-01-01T00:00:00Z                   │
├────────────────────┼────────────────────────────────────────┤
│ Completed          │ 2026-01-01T00:00:05Z                   │
└────────────────────┴────────────────────────────────────────┘
"
`;

exports[`output snapshot tests > printHeader スナップショット 1`] = `
"╔════════════════════════════════════════════════════════════╗
║                       ATELIER v0.1.0                       ║
╚════════════════════════════════════════════════════════════╝"
`;

exports[`output snapshot tests > printRunResult (completed) スナップショット 1`] = `
"
╔════════════════════════════════════════════════════════╗
║☣ Commission 実行結果                                       ║
║════════════════════════════════════════════════════════║
║  Run ID: run_snapshot                                  ║
║  Commission: snapshot-commission                       ║
║  Status: ☣ completed                                   ║
║  Strokes: 2 / 3                                        ║
║  Duration: 5s                                          ║
║  Started: 2026-01-01T00:00:00Z                         ║
║  Completed: 2026-01-01T00:00:05Z                       ║
╚════════════════════════════════════════════════════════╝
"
`;

exports[`output snapshot tests > printRunResult (failed) スナップショット 1`] = `
"
╔════════════════════════════════════════════════════════╗
║☣ Commission 実行結果                                       ║
║════════════════════════════════════════════════════════║
║  Run ID: run_snapshot                                  ║
║  Commission: snapshot-commission                       ║
║  Status: ✕ failed                                      ║
║  Strokes: 2 / 3                                        ║
║  Duration: 5s                                          ║
║  Started: 2026-01-01T00:00:00Z                         ║
║  Completed: 2026-01-01T00:00:05Z                       ║
║════════════════════════════════════════════════════════║
║  ✕ Errors                                              ║
║    [s1] error msg                                      ║
╚════════════════════════════════════════════════════════╝
"
`;

exports[`output snapshot tests > printTable スナップショット 1`] = `
"╔════════╤═════════╗
║ Name   │ Status  ║
╟────────┼─────────╢
║ task-1 │ done    ║
╟────────┼─────────╢
║ task-2 │ pending ║
╚════════╧═════════╝"
`;
